Make theme toggle static on mobile (not fixed)

--- a/public/style.css
+++ b/public/style.css
@@ -1034,6 +1034,7 @@ footer p:last-child {
   }
 
   .theme-toggle {
+    position: absolute;
     top: 50px;
     left: 12px;
     width: 40px;
